# signum-rs

./: .gitignore  Cargo.toml  README.md
crates/hallucinator-core/: Cargo.toml
crates/hallucinator-core/src/: algorithms.rs  error.rs  lib.rs  pattern.rs  song.rs  track.rs
crates/hallucinator-core/src/midi_fx/: arpeggiator.rs  chance.rs  echo.rs  harmonizer.rs  humanize.rs  mod.rs  quantize.rs  swing.rs  transpose.rs
crates/hallucinator-gui/: Cargo.toml
crates/hallucinator-gui/src/: clipboard.rs  main.rs
crates/hallucinator-gui/src/app/: action_handlers.rs  audio_ops.rs  config.rs  mod.rs  plugin_windows.rs  sample_kit_ops.rs  track_ops.rs  types.rs
crates/hallucinator-gui/src/panels/: browser.rs  clip_editor.rs  device_rack.rs  drum_roll.rs  midi_fx_rack.rs  mod.rs  plugins.rs  song_view.rs  timeline.rs  track_headers.rs  transport.rs
crates/hallucinator-gui/src/panels/arrange/: drawing.rs  input.rs  mod.rs  types.rs
crates/hallucinator-gui/src/panels/keyboard_sequencer/: drawing.rs  input.rs  mod.rs  types.rs
crates/hallucinator-gui/src/panels/piano_roll/: drawing.rs  geometry.rs  input.rs  mod.rs  types.rs
crates/hallucinator-services/: Cargo.toml
crates/hallucinator-services/src/: audio_engine.rs  audio_io.rs  lib.rs  wav_reader.rs
crates/hallucinator-services/src/audio_effects/: mod.rs  native.rs
crates/hallucinator-services/src/audio_effects/native_instruments/: sample_kit.rs  sampler.rs
crates/hallucinator-services/src/audio_effects/vst3/: error.rs  wrapper.rs
crates/rack-vst3-gui/: Cargo.toml  build.rs
crates/rack-vst3-gui/cpp/: vst3_gui.cpp  vst3_gui.h
crates/rack-vst3-gui/src/: lib.rs
crates/signum-core/: Cargo.toml
crates/signum-core/src/: algorithms.rs  clip.rs  error.rs  lib.rs  midi_fx.rs  pattern.rs  song.rs  timeline.rs  track.rs  transport.rs
crates/signum-gui/: Cargo.toml
crates/signum-gui/src/: app.rs  clipboard.rs  main.rs
crates/signum-gui/src/panels/: arrange.rs  browser.rs  clip_editor.rs  drum_roll.rs  keyboard_sequencer.rs  midi_fx_rack.rs  mod.rs  pattern_bank.rs  piano_roll.rs  plugins.rs  song_view.rs  timeline.rs  track_headers.rs  transport.rs
crates/signum-services/: Cargo.toml
crates/signum-services/src/: audio_engine.rs  audio_input.rs  input_monitor.rs  lib.rs
crates/signum-services/src/audio_effects/: mod.rs  native.rs
crates/signum-services/src/audio_effects/native_instruments/: drum808.rs  mod.rs  sample_kit.rs  sampler.rs
crates/signum-services/src/audio_effects/vst3/: gui.rs  instrument.rs  mod.rs  scanner.rs
docs/: sequencer.md
spec/: hapax-sequencer.md  hardware-midi-control.md  sample-accurate-timing.md  time-elasticity.md
