[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["hallucinator contributors"]
license = "MIT"

[workspace.dependencies]
# Audio
cpal = "0.15"
fundsp = "0.21"
rubato = "0.16"
hound = "3.5"

# Async/threading
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GUI
eframe = "0.31"
egui = "0.31"

# HTTP (for Ollama)
ureq = { version = "2.12", features = ["json"] }

# VST3 plugin hosting
rack = { version = "0.4", features = ["vst3"] }

# Internal crates
hallucinator-core = { path = "crates/hallucinator-core" }
hallucinator-services = { path = "crates/hallucinator-services" }
rack-vst3-gui = { path = "crates/rack-vst3-gui" }
