[package]
name = "signum-gui"
version.workspace = true
edition.workspace = true

[dependencies]
signum-core = { workspace = true }
signum-services = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hound = { workspace = true }
dirs = "5.0"
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
rack-vst3-gui = { workspace = true }
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
