[package]
name = "signum-services"
version.workspace = true
edition.workspace = true

[dependencies]
signum-core = { workspace = true }
cpal = { workspace = true }
fundsp = { workspace = true }
rubato = { workspace = true }
hound = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
rack = { workspace = true }

# VST3 GUI support
vst3 = "0.3"
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
rack-vst3-gui = { workspace = true }
